refactor: move data files to data/ folder, remove assignment PDF

--- a/notebooks/ticket_evaluator_groq.ipynb
+++ b/notebooks/ticket_evaluator_groq.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bc14f416",
    "metadata": {},
    "outputs": [],
@@ -43,10 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3bfac6b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2026-02-21 15:06:03,166 [INFO] ✅ Cliente Groq inicializado. Modelo: llama-3.3-70b-versatile\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import json\n",
@@ -84,8 +92,8 @@
     "MODEL       = \"llama-3.3-70b-versatile\"\n",
     "TEMPERATURE = 0.1\n",
     "MAX_RETRIES = 4\n",
-    "INPUT_FILE  = \"../tickets.csv\"\n",
-    "OUTPUT_FILE = \"../tickets_evaluated.csv\"\n",
+    "INPUT_FILE  = \"../data/tickets.csv\"\n",
+    "OUTPUT_FILE = \"../data/tickets_evaluated.csv\"\n",
     "\n",
     "client = Groq(api_key=GROQ_API_KEY)\n",
     "logger.info(f\"✅ Cliente Groq inicializado. Modelo: {MODEL}\")"
@@ -107,10 +115,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d6029edb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2026-02-21 15:06:03,195 [INFO] System prompt y función de user prompt definidos.\n"
+     ]
+    }
+   ],
    "source": [
     "SYSTEM_PROMPT = \"\"\"\n",
     "You are an expert quality assurance analyst for a customer support team.\n",
@@ -176,10 +192,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0f72c23a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2026-02-21 15:06:03,213 [INFO] Función de llamada a API definida con retry automático.\n"
+     ]
+    }
+   ],
    "source": [
     "@retry(\n",
     "    retry=retry_if_exception_type(Exception),\n",
@@ -246,9 +270,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2026-02-21 15:06:03,239 [INFO] Función de evaluación definida.\n"
+     ]
+    }
+   ],
    "source": [
     "def evaluate_tickets(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"\n",
@@ -308,9 +340,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2026-02-21 15:06:03,250 [INFO] CSV cargado: 5 filas | columnas: ['ticket', 'reply']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ticket</th>\n",
+       "      <th>reply</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hi, I'd like to check the shipping status of m...</td>\n",
+       "      <td>Sure, you can check your shipping status on ou...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The product I received is defective. I'd like ...</td>\n",
+       "      <td>We're sorry to hear that. Could you please pro...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>I have a question about how to set up my new d...</td>\n",
+       "      <td>Hello, thanks for contacting us. Please go to ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hello, my account was charged twice. Could you...</td>\n",
+       "      <td>We've identified the issue and have requested ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>I can't log into my account. It says 'invalid ...</td>\n",
+       "      <td>Please reset your password using the 'Forgot P...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              ticket  \\\n",
+       "0  Hi, I'd like to check the shipping status of m...   \n",
+       "1  The product I received is defective. I'd like ...   \n",
+       "2  I have a question about how to set up my new d...   \n",
+       "3  Hello, my account was charged twice. Could you...   \n",
+       "4  I can't log into my account. It says 'invalid ...   \n",
+       "\n",
+       "                                               reply  \n",
+       "0  Sure, you can check your shipping status on ou...  \n",
+       "1  We're sorry to hear that. Could you please pro...  \n",
+       "2  Hello, thanks for contacting us. Please go to ...  \n",
+       "3  We've identified the issue and have requested ...  \n",
+       "4  Please reset your password using the 'Forgot P...  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def load_and_validate_csv(filepath: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
@@ -357,9 +472,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2026-02-21 15:06:03,312 [INFO] Evaluando fila 1/5...\n",
+      "2026-02-21 15:06:03,984 [INFO] HTTP Request: POST https://api.groq.com/openai/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2026-02-21 15:06:03,997 [INFO]   ✓ Content: 4/5 | Format: 5/5\n",
+      "2026-02-21 15:06:03,997 [INFO] Evaluando fila 2/5...\n",
+      "2026-02-21 15:06:04,499 [INFO] HTTP Request: POST https://api.groq.com/openai/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2026-02-21 15:06:04,501 [INFO]   ✓ Content: 4/5 | Format: 5/5\n",
+      "2026-02-21 15:06:04,502 [INFO] Evaluando fila 3/5...\n",
+      "2026-02-21 15:06:05,038 [INFO] HTTP Request: POST https://api.groq.com/openai/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2026-02-21 15:06:05,040 [INFO]   ✓ Content: 4/5 | Format: 5/5\n",
+      "2026-02-21 15:06:05,041 [INFO] Evaluando fila 4/5...\n",
+      "2026-02-21 15:06:05,329 [INFO] HTTP Request: POST https://api.groq.com/openai/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2026-02-21 15:06:05,329 [INFO]   ✓ Content: 5/5 | Format: 5/5\n",
+      "2026-02-21 15:06:05,329 [INFO] Evaluando fila 5/5...\n",
+      "2026-02-21 15:06:05,704 [INFO] HTTP Request: POST https://api.groq.com/openai/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2026-02-21 15:06:05,704 [INFO]   ✓ Content: 4/5 | Format: 5/5\n",
+      "2026-02-21 15:06:05,720 [INFO] ✅ Evaluación completada. Resultado guardado en: ../data/tickets_evaluated.csv\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ticket</th>\n",
+       "      <th>reply</th>\n",
+       "      <th>content_score</th>\n",
+       "      <th>content_explanation</th>\n",
+       "      <th>format_score</th>\n",
+       "      <th>format_explanation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hi, I'd like to check the shipping status of m...</td>\n",
+       "      <td>Sure, you can check your shipping status on ou...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>The reply addresses the main issue by providin...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>The reply is clear, well-structured, and free ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The product I received is defective. I'd like ...</td>\n",
+       "      <td>We're sorry to hear that. Could you please pro...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>The reply addresses the main issue by acknowle...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>The reply is clear, well-structured, and error...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>I have a question about how to set up my new d...</td>\n",
+       "      <td>Hello, thanks for contacting us. Please go to ...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>The reply addresses the main issue by providin...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>The reply is clear, well-structured, and free ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hello, my account was charged twice. Could you...</td>\n",
+       "      <td>We've identified the issue and have requested ...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>The reply fully addresses the customer's issue...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>The response is clear, concise, and well-struc...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>I can't log into my account. It says 'invalid ...</td>\n",
+       "      <td>Please reset your password using the 'Forgot P...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>The reply addresses the main issue by providin...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>The reply is clear, well-structured, and free ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              ticket  \\\n",
+       "0  Hi, I'd like to check the shipping status of m...   \n",
+       "1  The product I received is defective. I'd like ...   \n",
+       "2  I have a question about how to set up my new d...   \n",
+       "3  Hello, my account was charged twice. Could you...   \n",
+       "4  I can't log into my account. It says 'invalid ...   \n",
+       "\n",
+       "                                               reply  content_score  \\\n",
+       "0  Sure, you can check your shipping status on ou...              4   \n",
+       "1  We're sorry to hear that. Could you please pro...              4   \n",
+       "2  Hello, thanks for contacting us. Please go to ...              4   \n",
+       "3  We've identified the issue and have requested ...              5   \n",
+       "4  Please reset your password using the 'Forgot P...              4   \n",
+       "\n",
+       "                                 content_explanation  format_score  \\\n",
+       "0  The reply addresses the main issue by providin...             5   \n",
+       "1  The reply addresses the main issue by acknowle...             5   \n",
+       "2  The reply addresses the main issue by providin...             5   \n",
+       "3  The reply fully addresses the customer's issue...             5   \n",
+       "4  The reply addresses the main issue by providin...             5   \n",
+       "\n",
+       "                                  format_explanation  \n",
+       "0  The reply is clear, well-structured, and free ...  \n",
+       "1  The reply is clear, well-structured, and error...  \n",
+       "2  The reply is clear, well-structured, and free ...  \n",
+       "3  The response is clear, concise, and well-struc...  \n",
+       "4  The reply is clear, well-structured, and free ...  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_evaluated = evaluate_tickets(df_input)\n",
     "\n",
@@ -385,9 +636,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=======================================================\n",
+      "          RESUMEN DE EVALUACIÓN\n",
+      "=======================================================\n",
+      "Total de tickets procesados : 5\n",
+      "Content Score — Media: 4.20 | Min: 4 | Max: 5\n",
+      "Format Score  — Media: 5.00 | Min: 5 | Max: 5\n",
+      "Filas con error             : 0\n",
+      "=======================================================\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"=\" * 55)\n",
     "print(\"          RESUMEN DE EVALUACIÓN\")\n",
@@ -435,7 +701,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
